--- a/intelliroute_project/package.json
+++ b/intelliroute_project/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "tailwind.config.js",
   "scripts": {
-  "build": "tailwindcss -i ./static/css/input.css -o ./static/css/styles.css --minify"
+  "build": "npx tailwindcss -i ./static/css/input.css -o ./static/css/styles.css --minify"
+
   },
   "repository": {
     "type": "git",
