--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ db.sqlite3
 
 # Node / Tailwind
 node_modules/
+package.json
+package-lock.json
+tailwind.config.js
+postcss.config.js
 tailwindcss.exe
 
 # OS
